--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-eslint": "9.0.0",
+    "eslint": "5.6.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.0",
     "react-redux": "^5.1.0",
     "redux": "^4.0.1"
   }
